--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,9 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3024.8537546099624!2d-73.99629724709129!3d40.6959624279147!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2zQnJvb2tseW4gSGVpZ2h0cywg5biD6bKB5YWL5p6X57q957qm5bee!5e0!3m2!1szh-CN!2sus!4v1542946681600" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
   <!-- Contact Form -->
-  <form action="#" method="post">...</form>
+  <form action="#" method="post">
+    <label for="fullname">Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+  </form>
 </body>
 </html>
