--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,9 @@
     <inpuut type="email" id="email" name="email" placeholder="your email" required>
     <label for="phone">Phone</label>
     <input type="tel" id="phone" name="phone" placeholder="your phone(optional)">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="10"></textarea>
+    <iput type="submit" value="send">
   </form>
 </body>
 </html>
