--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <input type="tel" id="phone" name="phone" placeholder="your phone(optional)">
     <label for="message">Message</label>
     <textarea id="message" name="message" rows="10"></textarea>
-    <iput type="submit" value="send">
+    <input type="submit" value="send">
   </form>
 </body>
 </html>
